Fix selection-bounds test for root-layer-scrolls.

This test revealed a bug with FrameSelection::RevealSelection. This
method calls ComputeRectToScroll to determine the rect to scroll into
view. It then calls LayoutObject::ScrollRectToVisible() on this rect to
bring it into view. The bug is that ScrollRectToVisible expectes the
rect in absolute coordinates but ComputeRectToScroll returns a rect in
document coordinates.

Prior to root-layer-scrolls, absolute and document coordinates were
equivalent. After turning on root-layer-scrolls they differ, since the
LayoutView has a scrolling box. For more details, see:
https://www.chromium.org/developers/design-documents/blink-coordinate-spaces


This CL fixes the issue by making the lower level
LayoutObject::SelectionRect method return the rect in absolute
coordinates. I've also renamed this method and other methods that use it
to clarify what coordinate space returned rects are in.

I also updated the test to make it more idiomatic with modern Blink
tests as well as well as to improve it by starting both scroll into view
checks from the same, non-origin, scroll offset.

Bug: 810977
Change-Id: I7466c5b3b664a623358e8465c44ca0e2f3a9a215
Reviewed-on: https://chromium-review.googlesource.com/912698
Commit-Queue: David Bokan <bokan@chromium.org>
Reviewed-by: Steve Kobes <skobes@chromium.org>
Cr-Commit-Position: refs/heads/master@{#536216}
Former-commit-id: c9a72be183bd775d07b537414648a22316eba8b3